--- a/Dockerfile.H100
+++ b/Dockerfile.H100
@@ -1,16 +1,34 @@
 FROM runpod/pytorch:2.2.0-py3.10-cuda12.1.1-devel-ubuntu22.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 WORKDIR /workspace
 
 COPY . .
 
 RUN apt-get update && apt-get install -y \
     git \
+    wget \
     && rm -rf /var/lib/apt/lists/*
+
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /workspace/miniconda.sh && bash /workspace/miniconda.sh -b -p /opt/conda
+
+ENV PATH /opt/conda/bin:$PATH
+
+RUN conda update conda && conda create -n vllm python=3.10
+RUN conda init
+RUN source ~/.bashrc
+RUN conda activate vllm
+ENV PATH /opt/conda/envs/vllm/bin:$PATH
+RUN pip install -e vllm/
+
+RUN conda create -n axolotl -y
+RUN conda activate axolotl
+RUN pip install -e axolotl/[flash-attn,deepspeed]
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements_H100.txt
 
-CMD ["python3", "script.py"]
+RUN conda activate vllm
 
-# To build for H100s, comment out the mpi4py installation in requirements.txt
+CMD ["python3", "script.py"]
