--- a/Dockerfile.H100
+++ b/Dockerfile.H100
@@ -14,20 +14,21 @@ RUN apt-get update && apt-get install -y \
 RUN pip install --upgrade pip
 RUN pip install -r requirements_H100.txt
 
-RUN mkdir -p ~/miniconda3 && \
-    wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh && \
-    bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3 && \
-    rm -rf ~/miniconda3/miniconda.sh
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /workspace/miniconda.sh && \
+    bash /workspace/miniconda.sh -b -u -p /workspace && \
+    rm -rf /workspace/miniconda.sh
 
-RUN ~/miniconda3/bin/conda init bash
+RUN /workspace/bin/conda init bash
 
-RUN ~/miniconda3/bin/conda create -n axolotl python=3.10 -y && \
-    ~/miniconda3/bin/conda run -n axolotl pip install packaging torch ninja -v && \
-    ~/miniconda3/bin/conda run -n axolotl pip install -e axolotl/[flash-attn,deepspeed] -v && \
-    ~/miniconda3/bin/conda run -n axolotl pip install -r requirements_H100.txt
+RUN /workspace/bin/conda create -n axolotlenv python=3.10 -y && \
+    /workspace/bin/conda run -n axolotlenv pip install packaging torch ninja -v && \
+    /workspace/bin/conda run -n axolotlenv pip install -e axolotl/[flash-attn,deepspeed] -v && \
+    /workspace/bin/conda run -n axolotlenv pip install -r requirements_H100.txt && \
+    /workspace/bin/conda run -n axolotlenv pip uninstall flash-attn -v -y && \
+    FLASH_ATTENTION_FORCE_BUILD=TRUE /workspace/bin/conda run -n axolotlenv pip install flash-attn -v
 
-RUN ~/miniconda3/bin/conda create -n vllm python=3.10 -y && \
-    ~/miniconda3/bin/conda run -n vllm pip install -e vllm/ -v && \
-    ~/miniconda3/bin/conda run -n vllm pip install -r requirements_H100.txt
+RUN /workspace/bin/conda create -n vllmenv python=3.10 -y && \
+    /workspace/bin/conda run -n vllmenv pip install -e vllm/ -v && \
+    /workspace/bin/conda run -n vllmenv pip install -r requirements_H100.txt
 
 CMD ["python3", "script.py"]
